[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/images/TileSet.tres" type="TileSet" id=1]
[ext_resource path="res://objects/SquidGame/SquidPlayer.tscn" type="PackedScene" id=2]
[ext_resource path="res://objects/SquidGame/SquidGame.gd" type="Script" id=3]
[ext_resource path="res://objects/SquidGame/Progress.gd" type="Script" id=4]

[node name="SquidGame" type="Node2D"]
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -9.0
margin_top = -10.0
margin_right = 271.0
margin_bottom = 153.0
color = Color( 0.360784, 0, 1, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
cell_custom_transform = Transform2D( 16, 0, 0, 16, 0, 0 )
format = 1
tile_data = PoolIntArray( -1, 21, 0, -65536, 21, 0, -65535, 21, 0, -65534, 21, 0, -65533, 21, 0, -65532, 21, 0, -65531, 21, 0, -65530, 21, 0, -65529, 21, 0, -65528, 21, 0, -65527, 21, 0, -65526, 21, 0, -65525, 21, 0, -65524, 21, 0, -65523, 21, 0, -65522, 21, 0, -65521, 21, 0, 65535, 21, 0, 0, 0, 0, 1, -1610612734, 0, 2, -1610612734, 0, 3, -1610612734, 0, 4, -1610612734, 0, 5, -1610612734, 0, 6, -1610612734, 0, 7, -1610612734, 0, 8, -1610612734, 0, 9, -1610612734, 0, 10, -1610612734, 0, 11, -1610612734, 0, 12, -1610612734, 0, 13, -1610612734, 0, 14, -1610612734, 0, 15, -1610612736, 0, 16, 21, 0, 131071, 21, 0, 65536, 2, 0, 65537, 1610612739, 0, 65538, 1610612739, 0, 65539, 1610612739, 0, 65540, 1610612739, 0, 65541, 1610612739, 0, 65542, 1610612739, 0, 65543, 1610612739, 0, 65544, 1610612739, 0, 65545, 1610612739, 0, 65546, 1610612739, 0, 65547, 1610612739, 0, 65548, 1610612739, 0, 65549, 1610612739, 0, 65550, 1610612739, 0, 65551, 1610612738, 0, 65552, 21, 0, 196607, 21, 0, 131072, 2, 0, 131073, 1610612739, 0, 131074, 1610612739, 0, 131075, 1610612739, 0, 131076, 1610612739, 0, 131077, 1610612739, 0, 131078, 1610612739, 0, 131079, 1610612739, 0, 131080, 1610612739, 0, 131081, 1610612739, 0, 131082, 1610612739, 0, 131083, 1610612739, 0, 131084, 1610612739, 0, 131085, 1610612739, 0, 131086, 1610612739, 0, 131087, 1610612738, 0, 131088, 21, 0, 262143, 21, 0, 196608, 2, 0, 196609, 1610612739, 0, 196610, 1610612739, 0, 196611, 1610612739, 0, 196612, 1610612739, 0, 196613, 1610612739, 0, 196614, 1610612739, 0, 196615, 1610612739, 0, 196616, 1610612739, 0, 196617, 1610612739, 0, 196618, 1610612739, 0, 196619, 1610612739, 0, 196620, 1610612739, 0, 196621, 1610612739, 0, 196622, 1610612739, 0, 196623, 1610612738, 0, 196624, 21, 0, 327679, 21, 0, 262144, 2, 0, 262145, 1610612739, 0, 262146, 1610612739, 0, 262147, 1610612739, 0, 262148, 1610612739, 0, 262149, 1610612739, 0, 262150, 1610612739, 0, 262151, 1610612739, 0, 262152, 1610612739, 0, 262153, 1610612739, 0, 262154, 1610612739, 0, 262155, 1610612739, 0, 262156, 1610612739, 0, 262157, 1610612739, 0, 262158, 1610612739, 0, 262159, 1610612738, 0, 262160, 21, 0, 393215, 21, 0, 327680, 2, 0, 327681, 1610612739, 0, 327682, 1610612739, 0, 327683, 1610612739, 0, 327684, 1610612739, 0, 327685, 1610612739, 0, 327686, 1610612739, 0, 327687, 1610612739, 0, 327688, 1610612739, 0, 327689, 1610612739, 0, 327690, 1610612739, 0, 327691, 1610612739, 0, 327692, 1610612739, 0, 327693, 1610612739, 0, 327694, 1610612739, 0, 327695, 1610612738, 0, 327696, 21, 0, 458751, 21, 0, 393216, 2, 0, 393217, 1610612739, 0, 393218, 1610612739, 0, 393219, 1610612739, 0, 393220, 1610612739, 0, 393221, 1610612739, 0, 393222, 1610612739, 0, 393223, 1610612739, 0, 393224, 1610612739, 0, 393225, 1610612739, 0, 393226, 1610612739, 0, 393227, 1610612739, 0, 393228, 1610612739, 0, 393229, 1610612739, 0, 393230, 1610612739, 0, 393231, 1610612738, 0, 393232, 21, 0, 524287, 21, 0, 458752, 2, 0, 458753, 1610612739, 0, 458754, 1610612739, 0, 458755, 1610612739, 0, 458756, 1610612739, 0, 458757, 1610612739, 0, 458758, 1610612739, 0, 458759, 1610612739, 0, 458760, 1610612739, 0, 458761, 1610612739, 0, 458762, 1610612739, 0, 458763, 1610612739, 0, 458764, 1610612739, 0, 458765, 1610612739, 0, 458766, 1610612739, 0, 458767, 1610612738, 0, 458768, 21, 0, 589823, 21, 0, 524288, -1073741824, 0, 524289, -1073741822, 0, 524290, -1073741822, 0, 524291, -1073741822, 0, 524292, -1073741822, 0, 524293, -1073741822, 0, 524294, -1073741822, 0, 524295, -1073741822, 0, 524296, -1073741822, 0, 524297, -1073741822, 0, 524298, -1073741822, 0, 524299, -1073741822, 0, 524300, -1073741822, 0, 524301, -1073741822, 0, 524302, -1073741822, 0, 524303, 1610612736, 0, 524304, 21, 0, 655359, 21, 0, 589824, 21, 0, 589825, 21, 0, 589826, 21, 0, 589827, 21, 0, 589828, 21, 0, 589829, 21, 0, 589830, 21, 0, 589831, 21, 0, 589832, 21, 0, 589833, 21, 0, 589834, 21, 0, 589835, 21, 0, 589836, 21, 0, 589837, 21, 0, 589838, 21, 0, 589839, 21, 0, 589840, 21, 0 )

[node name="SquidPlayer" parent="." instance=ExtResource( 2 )]
position = Vector2( 128, 72 )

[node name="Timer" type="Timer" parent="SquidPlayer"]
wait_time = 5.0
one_shot = true

[node name="Camera2D" type="Camera2D" parent="."]
visible = false
position = Vector2( 128, 72 )
current = true

[node name="InkTimer" type="Timer" parent="."]
one_shot = true

[node name="Progress" type="Node2D" parent="."]
script = ExtResource( 4 )
[connection signal="timeout" from="SquidPlayer/Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="InkTimer" to="." method="_on_InkTimer_timeout"]
